--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/thsmmil/API_IFEgg#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "json-server": "^0.17.0"
   }
 }
